add a few more tests before upgrade
adding tests to cover risks found when preparing for upgrade